--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -36,9 +36,6 @@
   margin: 16px;
   padding: 16px;
 }
-.modal--account .modal__content__wrapper {
-  max-width: 1100px;
-}
 
 .modal__content {
   position: relative;
@@ -52,12 +49,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
 }
-.modal--account .modal__content,
-.modal--plans .modal__content {
-  min-height: calc(100vh - 200px);
-  display: flex;
-  flex-direction: column;
-}
+
 .modal--signup,
 .modal--signin {
   text-align: center;
@@ -69,10 +61,6 @@
 
 .modal[aria-hidden="false"] .modal__content {
   transform: translateY(0);
-}
-
-.modal--plans .modal__content__wrapper {
-  max-width: 1200px;
 }
 
 .close__btn {
@@ -114,7 +102,7 @@
   line-height: 1;
   color: #878787;
   position: absolute;
-  top: 14px;
+  top: 22px;
   left: 16px;
   transition: 0.3s;
 }
@@ -176,6 +164,17 @@
 .modal__resend-text a,
 .modal__form-note a {
   text-decoration: underline;
+}
+@media (max-width: 768px) {
+  .modal__content {
+    padding: 16px 12px;
+  }
+  .close__btn {
+    width: 25px;
+    height: 25px;
+    top: 25px;
+    right: 25px;
+  }
 }
 @media (max-width: 600px) {
   .modal__submit-btn {
